# docker-env

./: .gitignore
golang/: Dockerfile  Makefile  docker-compose.yml  intellij.md
python/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
python/.devcontainer/: devcontainer.json
